--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </head>
 <body>
+    <div class = "calculator-container">
+        <input type = "text" id = "input-box" name = "input-box">
+        <button type = "button">C</button>
+        <button type = "button">&divide</button>
+        <button type = "button">&times</button>
+        <button type = "button">7</button>
+        <button type = "button">8</button>
+        <button type = "button">9</button>
+        <button type = "button">+</button>
+        <button type = "button">4</button>
+        <button type = "button">5</button>
+        <button type = "button">6</button>
+        <button type = "button">1</button>
+        <button type = "button">2</button>
+        <button type = "button">3</button>
+        <button type = "button">0</button>
+        <button type = "button">.</button>
+        <button type = "button">=</button>
+        <button type = "button">-</button>
+    </div>
     <script src="myscripts.js"></script>
 </body>
 </html>
