Implement some of the Operation Functionality for the Calculator

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <button type = "button" class = "calc-button" id = "clear-button">C</button>
                     <button type = "button" class = "calc-button">+/-</button>
                     <button type = "button" class = "calc-button">%</button>
-                    <button type = "button" class = "calc-button operation-button">&divide</button>
+                    <button type = "button" class = "calc-button operation-button">/</button>
                 </div>
                 <div class = "buttons-row">
                     <button type = "button" class = "calc-button">7</button>
                     <button type = "button" class = "calc-button">8</button>
                     <button type = "button" class = "calc-button">9</button>
-                    <button type = "button" class = "calc-button operation-button">&times</button>
+                    <button type = "button" class = "calc-button operation-button">*</button>
                 </div>
                     
                 <div class = "buttons-row">
@@ -50,6 +50,6 @@
             </div>
         </div>
     </div>
-    <script src="myscripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
