Implement Functionalities of Calculator

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class = "calculator-case">
         <div class = "calculator-container">
-            <input type = "text" id = "input-box" name = "input-box">
+            <input type = "text" id = "input-box" name = "input-box" disabled>
             <div class = "buttons-container">
                 <div class = "buttons-row">
                     <button type = "button" class = "calc-button" id = "clear-button">C</button>
